import org.gradle.api.tasks.compile.JavaCompile

plugins {
    id 'java'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


group 'com.dist'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
    compile 'javax.servlet:jstl:1.2'
}
